# l4d2serverhub

./: AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml  test.yml
.superpowers/sdd/: task-1-report.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: a2s_query.rs  commands.rs  errors.rs  favorites_store.rs  history_store.rs  import_export.rs  lib.rs  logging.rs  main.rs  models.rs  search_history_store.rs  settings_store.rs  steam_launcher.rs  system_tray.rs  upstream_api.rs  upstream_config_store.rs
src-tauri/tests/: import_export_tests.rs  store_tests.rs
src/components/: app-shell.tsx  custom-rules-dialog.tsx  favorite-editor-dialog.tsx  favorite-group-picker-dialog.tsx  filter-toolbar.tsx  server-detail-panel.tsx  server-table.tsx  sortable-table-head.tsx  table-pagination.tsx
src/components/ui/: dropdown-menu.tsx  toast.tsx  toaster.tsx
src/lib/: api.ts  app-preferences.tsx  default-settings.ts  favorites.ts  filters.ts  i18n.ts  mode-tags.ts  server-detail-windows.ts  startup-ready.ts  table-sorting.ts  types.ts
src/lib/i18n/: types.ts
src/lib/i18n/locales/: en.ts  zh-CN.ts
src/pages/: about-page.tsx  favorites-page.tsx  history-page.tsx  server-detail-window-page.tsx  server-list-page.tsx  settings-page.tsx
