[package]
name = "l4d2-server-hub"
version = "1.0.0"
description = "L4D2 Server Hub desktop server browser"
authors = ["josexy"]
license = "MIT"
repository = "https://github.com/josexy/l4d2serverhub"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "l4d2_server_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "time",
    "sync",
] }
thiserror = "2"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "json",
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "multipart",
    "rustls-tls",
    "system-proxy",
] }
tauri-plugin-dialog = "2"
